<resources>
    <string name="app_name">Fels</string>
    <string name="app_full_name">Framgia e-Learning System</string>
    <string name="author_name">Hong Son Nguyen</string>
    <string name="author_url">https://www.facebook.com/blue.sky318</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Sign up</string>
    <string name="hint_email_input">Enter your email</string>
    <string name="hint_password_input">Enter your password</string>
    <string name="hint_name_input">What\'s your full-name?</string>
    <string name="hint_repassword_input">Password confirmation</string>
    <string name="label_login">Submit</string>
    <string name="label_register">Submit</string>
    <string name="label_link_register"><u>No account yet? Register now!</u></string>
    <string name="error_unauthorized">Unauthorized!</string>
    <string name="error_unknown">Something went wrong! Please try again later!</string>
    <string name="msg_no_internet">No internet accesss! Please check your connection!</string>
    <string name="msg_wait">Please waiting...</string>
    <string name="error_server_not_found">Server not found!</string>
    <string name="error_email_short">Email is too short!</string>
    <string name="error_email_blank">Email can not blank!</string>
    <string name="error_password_blank">Password can not blank!</string>
    <string name="error_email_invalid">Invalid email!</string>
    <string name="error_password_short">Password is too short!</string>
    <string name="error_response_data">Error response data!</string>
    <string name="error_internal_server_error">Internal server error!</string>
    <string name="msg_signup_successfully">Register successfully!</string>
    <string name="error_repassword_not_match">Password is not match to password confirmation</string>
    <string name="error_name_short">Name is too short!</string>
    <string name="error_name_blank">Name can not blank!</string>
    <string name="label_words">Words</string>
    <string name="label_lessons">Lessons</string>
    <string name="label_profile">PROFILE</string>
    <string name="description_ur_avatar">User\'s avatar</string>
    <string name="label_choose_category">Choose the category ...</string>
    <string name="num_of_words_learned">Number of words learned</string>
    <string name="label_start_lesson">Start lesson</string>
    <string name="unknow_answer">Unknow answer</string>
    <string name="bad_request">Bad request</string>
    <string name="label_result">Result</string>
    <string name="label_question">Question \#</string>
    <string name="label_lesson">Lesson</string>
    <string name="default_lesson_name">Uknown lesson</string>
    <string name="key_all_word">All</string>
    <string name="key_learned">Learned</string>
    <string name="key_not_learned">Not learned</string>
    <string name="format_file_saving_successfully">File was saved successfully in %s</string>
    <string name="title_update_profile">Update profile</string>
    <string name="label_update_profile">Done</string>
    <string name="msg_update_successfully">Update successfully!</string>
    <string name="no_category_found">No category found</string>
    <string name="error_cannot_save_result">Cannot save result</string>
    <string name="default_category_name">Unknow category name</string>
    <string name="label_lesson_results">Your lessons\' result</string>
    <string name="label_results">Results</string>
    <string name="not_answered">Not answered</string>
</resources>
